--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^4.4.1",
     "redux": "^3.3.1",
     "redux-thunk": "^2.0.1",
-    "redux-watch": "^1.1.0"
+    "redux-watch": "^1.1.0",
+    "tinycolor2": "^1.3.0"
   }
 }
