--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "adm": "adb shell input keyevent 82",
-    "build-apk": ".cd android && ./gradlew assembleRelease && cd ..",
+    "build-apk": "cd android && ./gradlew assembleRelease && cd ..",
     "test-apk": "cd android && ./gradlew installRelease && cd .."
   },
   "dependencies": {
     "firebase": "^2.4.1",
     "react": "^0.14.7",
     "react-native": "^0.23.0-rc1",
+    "react-native-vector-icons": "^1.3.4",
     "react-redux": "^4.4.1",
     "redux": "^3.3.1",
     "redux-thunk": "^2.0.1",
