--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "adm": "adb shell input keyevent 82",
     "build-apk": "cd android && ./gradlew assembleRelease && cd ..",
-    "test-apk": "cd android && ./gradlew installRelease && cd .."
+    "install-apk": "cd android && ./gradlew installRelease && cd .."
   },
   "dependencies": {
     "firebase": "^2.4.1",
