--- a/package.json
+++ b/package.json
@@ -2,11 +2,44 @@
   "name": "LoeffenNinetiesQuiz",
   "version": "0.0.1",
   "private": true,
+  "jest": {
+    "setupEnvScriptFile": "./node_modules/react-native/jestSupport/env.js",
+    "testPathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "testFileExtensions": [
+      "js"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "es6"
+    ],
+    "unmockedModulePathPatterns": [
+      "react",
+      "react-addons-test-utils",
+      "react-native-router-flux",
+      "promise",
+      "source-map",
+      "key-mirror",
+      "immutable",
+      "fetch",
+      "redux",
+      "redux-thunk",
+      "fbjs"
+    ],
+    "collectCoverage": false,
+    "verbose": true
+  },
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "adm": "adb shell input keyevent 82",
     "build-apk": "cd android && ./gradlew assembleRelease && cd ..",
-    "install-apk": "cd android && ./gradlew installRelease && cd .."
+    "install-apk": "cd android && ./gradlew installRelease && cd ..",
+    "test": "jest",
+    "test-no-cache": "rm -rf ./node_modules/jest-cli/.haste_cache && jest  --no-cache",
+    "test:watch": "npm run test -- --watch",
+    "test-chrome": "node-debug --preload false --nodejs --harmony jest --runInBand"
   },
   "dependencies": {
     "firebase": "^2.4.1",
@@ -18,5 +51,12 @@
     "redux-thunk": "^2.0.1",
     "redux-watch": "^1.1.0",
     "tinycolor2": "^1.3.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.7.6",
+    "babel-jest": "^11.0.2",
+    "babel-preset-react-native": "^1.5.6",
+    "jest-cli": "^11.0.2",
+    "react-addons-test-utils": "^15.0.1"
   }
 }
